--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
         </div>
 
         <div class="container-fluid carruselMarcas d-flex justify-content-evenly align-items-center">
-            <img src="/img/MercedesBenzLogo.png" alt="" height="40px">
-            <img src="/img/GMCLogo.png" alt="" height="60px">
-            <img src="/img/JeepLogo.png" alt="" height="40px">
-            <img src="/img/ToyotaLogo.png" alt="" height="40px">
-            <img src="/img/VolvoLogo.png" alt="" height="40px">
-            <img src="/img/chevroletLogo.png" alt="" height="40px">
-            <img src="/img/caterpillarLogo.png" alt="" height="70px">
-            <img src="/img/audiLogo.png" alt="" height="40px">
+            <img src="./img/MercedesBenzLogo.png" alt="" height="40px">
+            <img src="./img/GMCLogo.png" alt="" height="60px">
+            <img src="./img/JeepLogo.png" alt="" height="40px">
+            <img src="./img/ToyotaLogo.png" alt="" height="40px">
+            <img src="./img/VolvoLogo.png" alt="" height="40px">
+            <img src="./img/chevroletLogo.png" alt="" height="40px">
+            <img src="./img/caterpillarLogo.png" alt="" height="70px">
+            <img src="./img/audiLogo.png" alt="" height="40px">
         </div>
 
     </header>
