--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container-md">
             <div class="row">
                 <div class="col-md">
-                    <img src="./img/logo.ico.png" alt="" height="360px">
+                    <img src="./img/logo.ico.png" class="logo" alt="" >
                     <p class="innovandoTexto">Innovando en la reconstrucción de motores en República Dominicana.</p>
                 </div>
                 <div class="col-md">
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-        <div class="container-fluid carruselMarcas d-flex justify-content-evenly align-items-center">
+        <div class="carruselMarcas">
             <img src="./img/MercedesBenzLogo.png" alt="" height="40px">
             <img src="./img/GMCLogo.png" alt="" height="60px">
             <img src="./img/JeepLogo.png" alt="" height="40px">
