realizacion de header responsive

--- a/index.html
+++ b/index.html
@@ -33,14 +33,22 @@
             </div>
         </nav>
 
-        <div class="container-md">
+        <div class="container-fluid contenedorLogoYTitulo">
             <div class="row">
-                <div class="col-md">
-                    <img src="./img/logo.ico.png" class="logo" alt="" >
+                <div class="col-sm-6 columna1Header ">
+                    <img src="./img/logo.ico.png" class="logo" alt="">
                     <p class="innovandoTexto">Innovando en la reconstrucción de motores en República Dominicana.</p>
                 </div>
-                <div class="col-md">
+                <div class="col-sm-6 d-flex flex-column align-items-center justify-content-evenly">
                     <h1>Talleres y Autorrepuestos Mérida</h1>
+                    <p class="textoHeader">Somos Mérida, un taller de reconstrucción de motores fundado en 2020, con
+                        mecánicos altamente especializados con más de 15 años de experiencia en todo tipo de motores.
+                    </p>
+                    <p class="textoHeader">En nuestro taller estamos genuinamente comprometidos con cada uno de
+                        nuestros
+                        clientes, asistimos tanto a talleres
+                        mecánicos como a empresas, brindándoles transparencia en el diagnóstico de sus motores, calidad
+                        y puntualidad a un precio inmejorable.</p>
                 </div>
             </div>
         </div>
