--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <div class="container-fluid">
                 <div class="row ">
                     <div class="d-flex justify-content-end align-items-center barraNav">
-                        <a href="#contacto">Contacto</a>
-                        <a href="#servicios">Servicios</a>
-                        <a href="#nosotros">Nosotros</a>
+                        <a class="nav-link" href="#contacto">Contacto</a>
+                        <a class="nav-link" href="#servicios">Servicios</a>
+                        <a class="nav-link" href="#nosotros">Nosotros</a>
                     </div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
 
         <div class="container-fluid contenedorLogoYTitulo">
             <div class="row">
-                <div class="col-sm-6 columna1Header ">
+                <div class="col-sm-6 columna1Header">
                     <img src="./img/logo.ico.png" class="logo" alt="">
                     <p class="innovandoTexto">Innovando en la reconstrucción de motores en República Dominicana.</p>
                 </div>
@@ -66,6 +66,43 @@
 
     </header>
 
+    <section id="nosotros">
+
+        <div class="container-fluid">
+            <div class="row filaNosotros">
+                <div class="col-sm-6 columna1Nosotros">
+                    <h2>Algunos Motores que Trabajamos</h2>
+                    <div class="listaMotoresQueTrabajamos">
+                        <p>Diesel</p>
+                        <p>Gasoil</p>
+                        <p>Gasolina</p>
+                        <p>Fuera de Borda</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 columna2Nosotros">
+                    <h2>¿Tienes un problema con tu motor?</h2>
+                    <p>Talleres Mérida es la solución.</p>
+                    <img src="./img/imagenNosotros.png" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="carruselAutos">
+            <div class="container-fluid Autos">
+                <img src="/img/camion.png" alt="" height="80px">
+                <img src="/img/auto.png" alt="" height="80px">
+                <img src="/img/colectivo.png" alt="" height="80px">
+                <img src="/img/lancha.png" alt="" height="80px">
+            </div>
+
+                <hr class="linea " size="4">
+
+        </div>
+    </section>
+
+    <section id="servicios">
+
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
