realizacion de la seccion servicios

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 <body>
 
     <header>
+
+        <!-- NOTE SECCION NAV  -->
         <nav>
             <div class="container-fluid">
                 <div class="row ">
@@ -32,6 +34,8 @@
                 </div>
             </div>
         </nav>
+
+        <!-- NOTE SECCION CUERPO DEL HEADER -->
 
         <div class="container-fluid contenedorLogoYTitulo">
             <div class="row">
@@ -65,6 +69,8 @@
         </div>
 
     </header>
+
+    <!-- NOTE SECCION NOSOTROS -->
 
     <section id="nosotros">
 
@@ -100,7 +106,117 @@
         </div>
     </section>
 
+    <!-- NOTE SECCION SERVICIOS -->
+
     <section id="servicios">
+        <h2>Servicios</h2>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-4 col-6 d-flex flex-column align-items-center columna1">
+                    <img src="./img/CULATA.png" class="imgLista" alt="" height="180px">
+                    <ul class="lista">
+                        <li>
+                            <p>Reparación de válvulas.</p>
+                        </li>
+                        <li>
+                            <p>Chequeo de plano.</p>
+                        </li>
+                        <li>
+                            <p>Relleno de culatas.</p>
+                        </li>
+                        <li>
+                            <p>rectificación de la superficie.</p>
+                        </li>
+                        <li>
+                            <p>Cambio de asientos, guías de válvulas.</p>
+                        </li>
+                        <li>
+                            <p>Camisillas.</p>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="bloqueMotor col-sm-4 col-6 d-flex flex-column align-items-center columna2">
+                    <img src="./img/BloqueMotor.png" class="imgLista" alt="" height="180px">
+                    <ul class="lista">
+                        <li>
+                            <p>Encamisado de block.
+                            </p>
+                        </li>
+                        <li>
+                            <p>Reconstrucción de cilindros.
+                            </p>
+                        </li>
+                        <li>
+                            <p>Alineación de bancadas.
+                            </p>
+                        </li>
+                        <li>
+                            <p>Rectificación de superficies. </p>
+                        </li>
+                        <li>
+                            <p>Corrección de medidas en general y otras instalaciones.</p>
+                        </li>
+
+                    </ul>
+                </div>
+
+                <div class="cigueniales col-sm-4 col-6 d-flex flex-column align-items-center columna3">
+                    <img src="./img/Cigueniales.png" class="imgLista" alt=" " height="180px">
+                    <ul class="lista">
+                        <li>
+                            <p>Rectificación de cigüeñal.
+                            </p>
+                        </li>
+                        <li>
+                            <p>Rectificación de superficie de muñones.
+                            </p>
+                        </li>
+                        <li>
+                            <p>Soldadura para recuperar los sellos o puntas de los ejes.
+                            </p>
+                        </li>
+                        <li>
+                            <p>Reconstrucción de roscas y cuñeros.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+                
+                <div class="col-sm-4 col-6 d-flex flex-column align-items-center">
+                    <img src="./img/Bielas.png" class="imgLista" alt="" height="190px">
+                    <ul class="lista">
+                        <li>
+                            <p>Rectificación de bielas.
+                            </p>
+                        </li>
+                        <li>
+                            <p>Rectificación del círculo. </p>
+                        </li>
+                        <li>
+                            <p>Adaptación de casquetes.
+                            </p>
+                        </li>
+                        <li>
+                            <p class="lista1">Reconstrucción de cuñeros.</p>
+                        </li>
+                        <li>
+                            <p>Cambio de pistones.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-sm-4 col-6 d-flex flex-column align-items-center">
+                    <img src="./img/FueraDeBorda.png" class="imgLista" alt="" height="190px">
+                </div>
+
+                <div class="col-sm-4 col-6 d-flex flex-column align-items-center">
+                    <img src="./img/VentaRepuestos.png" class="imgLista" class="ventaImg" alt="" height="192px">
+                </div>
+            </div>
+        </div>
 
     </section>
 
