--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
 
         <div class="carruselAutos">
             <div class="container-fluid Autos">
-                <img src="/img/camion.png" alt="" height="80px">
-                <img src="/img/auto.png" alt="" height="80px">
-                <img src="/img/colectivo.png" alt="" height="80px">
-                <img src="/img/lancha.png" alt="" height="80px">
+                <img src="./img/camion.png" alt="" height="80px">
+                <img src="./img/auto.png" alt="" height="80px">
+                <img src="./img/colectivo.png" alt="" height="80px">
+                <img src="./img/lancha.png" alt="" height="80px">
             </div>
 
                 <hr class="linea " size="4">
