realizacion de seccion cotizacion

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
         content="reparación, reconstruccion, taller mecanico, taller mecánico en santo domingo, taller de motores, taller mecanico de motores, taller de reparacion de motores, taller de reconstrucción de motores, taller de rectificacion de motores, rectificacion, reconstructora, rectificadora, reconstructora de motores en santo domingo, reconstrucción de motores en santo domingo, reconstruccion de motores fuera de borda, reconstruccion de motores diesel, reconstruccion de motores gasoil, reconstruccion de motores gasolina, reconstruccion de motores precio, reconstruccion de culatas">
-    <meta name="description" content="">
+    <meta name="description" content="Mecánicos con más de 15 años de experiencia en todo tipo de motores. Servicios especializados para flota de vehículos y talleres mecánicos. Comprometidos con la calidad y excelencia. ¡Llamanos!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="/img/logo.ico.png">
@@ -22,7 +22,7 @@
 
     <header>
 
-        <!-- NOTE SECCION NAV  -->
+        <!-- SECTION NAV  -->
         <nav>
             <div class="container-fluid">
                 <div class="row ">
@@ -35,7 +35,7 @@
             </div>
         </nav>
 
-        <!-- NOTE SECCION CUERPO DEL HEADER -->
+        <!-- SECTION SECCION CUERPO DEL HEADER -->
 
         <div class="container-fluid contenedorLogoYTitulo">
             <div class="row">
@@ -70,7 +70,7 @@
 
     </header>
 
-    <!-- NOTE SECCION NOSOTROS -->
+    <!-- SECTION SECCION NOSOTROS -->
 
     <section id="nosotros">
 
@@ -101,12 +101,12 @@
                 <img src="./img/lancha.png" alt="" height="80px">
             </div>
 
-                <hr class="linea " size="4">
+            <hr class="linea " size="4">
 
         </div>
     </section>
 
-    <!-- NOTE SECCION SERVICIOS -->
+    <!-- SECTION SECCION SERVICIOS -->
 
     <section id="servicios">
         <h2>Servicios</h2>
@@ -183,7 +183,7 @@
                         </li>
                     </ul>
                 </div>
-                
+
                 <div class="col-sm-4 col-6 d-flex flex-column align-items-center">
                     <img src="./img/Bielas.png" class="imgLista" alt="" height="190px">
                     <ul class="lista">
@@ -218,6 +218,125 @@
             </div>
         </div>
 
+    </section>
+
+    <!-- SECTION - COTIZACION -->
+
+    <section id="cotizacion">
+        <div class="container-fluid">
+            <div class="row d-flex justify-content-around">
+
+                <!-- NOTE COLUMNA 1 COTIZACION -->
+
+                <div class="col-sm-5 columna1Cotizacion">
+                    <div class="seccionColumna1Cotizacion">
+                        <h2>Cotización</h2>
+                        <p>Para dar un valor preciso se requiere un diagnóstico previo realizado por un especialista que
+                            enviaremos a dónde se encuentre tu vehículo. </p>
+                        <p>En el caso de contar con un diagnóstico previo, te daremos un valor aproximado.</p>
+                        <p id="diagnosticoTexto">El diagnóstico y desmontaje es realizado por un especialista.</p>
+                        <h2>¿Por qué elegirnos?</h2>
+                        <p>En cada trabajo que hacemos priorizamos la honestidad y calidad, brindando soluciones rápidas
+                            y
+                            efectivas.</p>
+                    </div>
+                    <div class="row filaCotizacion d-flex justify-content-evenly">
+                        <div class="col-sm-1 col-1 d-flex align-items-center justify-content-center">
+                            <img class="iconoCotizacion" src="./img/iconoTrofeo.png" alt="" height="40px">
+                        </div>
+                        <div class="col-sm-10 col-10">
+                            <h3>Talento.</h3>
+                            <p>Mecánico profesional con más de 15 años de experiencia en reconstrucción de motores.</p>
+                        </div>
+                    </div>
+
+                    <div class="row filaCotizacion d-flex justify-content-evenly">
+                        <div class="col-sm-1 col-1 d-flex align-items-center justify-content-center">
+                            <img class="iconoCotizacion" src="./img/iconoPC.png" alt="" height="40px">
+                        </div>
+                        <div class="col-sm-10 col-10">
+                            <h3>Tecnología.</h3>
+                            <p>Diagnóstico computarizado GRATUITO y lavado de piezas con técnicas avanzadas.</p>
+                        </div>
+                    </div>
+
+                    <div class="row filaCotizacion d-flex justify-content-evenly">
+                        <div class="col-sm-1 col-1 d-flex align-items-center justify-content-center">
+                            <img class="iconoCotizacion" src="./img/iconoDelivery.png" alt="" height="30px">
+                        </div>
+                        <div class="col-sm-10 col-10">
+                            <h3>Transporte de piezas.</h3>
+                            <p>Recolectamos y entregamos.</p>
+                        </div>
+                    </div>
+
+
+                    <div class="row filaCotizacion d-flex justify-content-evenly">
+                        <div class="col-sm-1 col-1 d-flex align-items-center justify-content-center">
+                            <img class="iconoCotizacion" src="./img/iconoPersonas.png" alt="" height="30px">
+                        </div>
+                        <div class="col-sm-10 col-10">
+                            <h3>Colaboraciones.</h3>
+                            <p>Contamos con la asesoría de expertos en múltiples áreas para casos particulares
+                                priorizando la resolución del problema.</p>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- NOTE COLUMNA 2 COTIZACION -->
+
+                <div class="col-sm-5 Columna2Cotizacion">
+                    <div class="row filaCotizacion d-flex justify-content-evenly">
+                        <div class="col-sm-1 col-1 d-flex align-items-center justify-content-center">
+                            <img class="iconoReloj" src="./img/iconoReloj.png" alt="" height="50px">
+                        </div>
+                        <div class="col-sm-10 col-10">
+                            <h3>Horarios.</h3>
+                            <p>Amplio horario de atención, incluso los fines de semana.</p>
+                        </div>
+                    </div>
+
+                    <div class="row filaCotizacion d-flex justify-content-evenly">
+                        <div class="col-sm-1 col-1 d-flex align-items-center justify-content-center">
+                            <img class="iconoCotizacion precioCalGar" src="./img/iconoPrecio.png" alt="" height="50px">
+                        </div>
+                        <div class="col-sm-10 col-10">
+                            <h3>Precios.</h3>
+                            <p>Precios favorables para proveedores de servicios mecánicos y empresas por contrato.</p>
+                        </div>
+                    </div>
+
+                    <div class="row filaCotizacion d-flex justify-content-evenly">
+                        <div class="col-sm-1 col-1 d-flex align-items-center justify-content-center">
+                            <img class="iconoCotizacion precioCalGar" src="./img/iconoCalidad.png" alt="" height="40px">
+                        </div>
+                        <div class="col-sm-10 col-10">
+                            <h3>Calidad.</h3>
+                            <p>Trabajos 100% transparentes, fiables y de calidad, con referencias comprobables en RD y Venezuela.</p>
+                        </div>
+                    </div>
+
+
+                    <div class="row filaCotizacion d-flex justify-content-evenly">
+                        <div class="col-sm-1 col-1  d-flex align-items-center justify-content-center">
+                            <img class="iconoCotizacion precioCalGar" src="./img/iconoGarantia.png" alt="" height="40px">
+                        </div>
+                        <div class="col-sm-10 col-10">
+                            <h3>Garantia.</h3>
+                            <p>Contamos con la asesoría de expertos en múltiples áreas para casos particulares
+                                priorizando la resolución del problema.</p>
+                        </div>
+                    </div>
+                    <div class="oculto">
+                    <div class="seccionColumna2Cotizacion d-flex flex-column align-items-center justify-content-evenly">
+                        <h2>Reconstrucción en piezas de maquinaria pesada</h2>
+                        <h3>Atencion y precios especiales para tu empresa o flota de vehiculos! </h3>
+                        <img class="camiones " src="./img/camiones.png" alt="" height="240px">
+                    </div>
+                </div>
+                </div>
+            </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
