--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                         <p>En el caso de contar con un diagnóstico previo, te daremos un valor aproximado.</p>
                         <p id="diagnosticoTexto">El diagnóstico y desmontaje es realizado por un especialista.</p>
                         <h2>¿Por qué elegirnos?</h2>
-                        <p>En cada trabajo que hacemos priorizamos la honestidad y calidad, brindando soluciones rápidas
+                        <p id="columna1Texto">En cada trabajo que hacemos priorizamos la honestidad y calidad, brindando soluciones rápidas
                             y
                             efectivas.</p>
                     </div>
