--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
         content="reparación, reconstruccion, taller mecanico, taller mecánico en santo domingo, taller de motores, taller mecanico de motores, taller de reparacion de motores, taller de reconstrucción de motores, taller de rectificacion de motores, rectificacion, reconstructora, rectificadora, reconstructora de motores en santo domingo, reconstrucción de motores en santo domingo, reconstruccion de motores fuera de borda, reconstruccion de motores diesel, reconstruccion de motores gasoil, reconstruccion de motores gasolina, reconstruccion de motores precio, reconstruccion de culatas">
-    <meta name="description" content="Mecánicos con más de 15 años de experiencia en todo tipo de motores. Servicios especializados para flota de vehículos y talleres mecánicos. Comprometidos con la calidad y excelencia. ¡Llamanos!">
+    <meta name="description"
+        content="Mecánicos con más de 15 años de experiencia en todo tipo de motores. Servicios especializados para flota de vehículos y talleres mecánicos. Comprometidos con la calidad y excelencia. ¡Llamanos!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="/img/logo.ico.png">
@@ -27,7 +28,7 @@
             <div class="container-fluid">
                 <div class="row ">
                     <div class="d-flex justify-content-end align-items-center barraNav">
-                        <a class="nav-link" href="#contacto">Contacto</a>
+                        <a class="nav-link" href="#dondeEstamos">Contacto</a>
                         <a class="nav-link" href="#servicios">Servicios</a>
                         <a class="nav-link" href="#nosotros">Nosotros</a>
                     </div>
@@ -236,35 +237,36 @@
                         <p>En el caso de contar con un diagnóstico previo, te daremos un valor aproximado.</p>
                         <p id="diagnosticoTexto">El diagnóstico y desmontaje es realizado por un especialista.</p>
                         <h2>¿Por qué elegirnos?</h2>
-                        <p id="columna1Texto">En cada trabajo que hacemos priorizamos la honestidad y calidad, brindando soluciones rápidas
+                        <p id="columna1Texto">En cada trabajo que hacemos priorizamos la honestidad y calidad, brindando
+                            soluciones rápidas
                             y
                             efectivas.</p>
                     </div>
                     <div class="row filaCotizacion d-flex justify-content-evenly">
-                        <div class="col-sm-1 col-1 d-flex align-items-center justify-content-center">
+                        <div class=" col-1 d-flex align-items-center justify-content-center">
                             <img class="iconoCotizacion" src="./img/iconoTrofeo.png" alt="" height="40px">
                         </div>
-                        <div class="col-sm-10 col-10">
+                        <div class=" col-10">
                             <h3>Talento.</h3>
                             <p>Mecánico profesional con más de 15 años de experiencia en reconstrucción de motores.</p>
                         </div>
                     </div>
 
                     <div class="row filaCotizacion d-flex justify-content-evenly">
-                        <div class="col-sm-1 col-1 d-flex align-items-center justify-content-center">
+                        <div class=" col-1 d-flex align-items-center justify-content-center">
                             <img class="iconoCotizacion" src="./img/iconoPC.png" alt="" height="40px">
                         </div>
-                        <div class="col-sm-10 col-10">
+                        <div class="col-10">
                             <h3>Tecnología.</h3>
                             <p>Diagnóstico computarizado GRATUITO y lavado de piezas con técnicas avanzadas.</p>
                         </div>
                     </div>
 
                     <div class="row filaCotizacion d-flex justify-content-evenly">
-                        <div class="col-sm-1 col-1 d-flex align-items-center justify-content-center">
+                        <div class=" col-1 d-flex align-items-center justify-content-center">
                             <img class="iconoCotizacion" src="./img/iconoDelivery.png" alt="" height="30px">
                         </div>
-                        <div class="col-sm-10 col-10">
+                        <div class="col-10">
                             <h3>Transporte de piezas.</h3>
                             <p>Recolectamos y entregamos.</p>
                         </div>
@@ -272,10 +274,10 @@
 
 
                     <div class="row filaCotizacion d-flex justify-content-evenly">
-                        <div class="col-sm-1 col-1 d-flex align-items-center justify-content-center">
+                        <div class=" col-1 d-flex align-items-center justify-content-center">
                             <img class="iconoCotizacion" src="./img/iconoPersonas.png" alt="" height="30px">
                         </div>
-                        <div class="col-sm-10 col-10">
+                        <div class="col-10">
                             <h3>Colaboraciones.</h3>
                             <p>Contamos con la asesoría de expertos en múltiples áreas para casos particulares
                                 priorizando la resolución del problema.</p>
@@ -288,56 +290,173 @@
 
                 <div class="col-sm-5 Columna2Cotizacion">
                     <div class="row filaCotizacion d-flex justify-content-evenly">
-                        <div class="col-sm-1 col-1 d-flex align-items-center justify-content-center">
+                        <div class=" col-1 d-flex align-items-center justify-content-center">
                             <img class="iconoReloj" src="./img/iconoReloj.png" alt="" height="50px">
                         </div>
-                        <div class="col-sm-10 col-10">
+                        <div class="col-10">
                             <h3>Horarios.</h3>
                             <p>Amplio horario de atención, incluso los fines de semana.</p>
                         </div>
                     </div>
 
                     <div class="row filaCotizacion d-flex justify-content-evenly">
-                        <div class="col-sm-1 col-1 d-flex align-items-center justify-content-center">
+                        <div class=" col-1 d-flex align-items-center justify-content-center">
                             <img class="iconoCotizacion precioCalGar" src="./img/iconoPrecio.png" alt="" height="50px">
                         </div>
-                        <div class="col-sm-10 col-10">
+                        <div class="col-10">
                             <h3>Precios.</h3>
                             <p>Precios favorables para proveedores de servicios mecánicos y empresas por contrato.</p>
                         </div>
                     </div>
 
                     <div class="row filaCotizacion d-flex justify-content-evenly">
-                        <div class="col-sm-1 col-1 d-flex align-items-center justify-content-center">
+                        <div class=" col-1 d-flex align-items-center justify-content-center">
                             <img class="iconoCotizacion precioCalGar" src="./img/iconoCalidad.png" alt="" height="40px">
                         </div>
-                        <div class="col-sm-10 col-10">
+                        <div class="col-10">
                             <h3>Calidad.</h3>
-                            <p>Trabajos 100% transparentes, fiables y de calidad, con referencias comprobables en RD y Venezuela.</p>
+                            <p>Trabajos 100% transparentes, fiables y de calidad, con referencias comprobables en RD y
+                                Venezuela.</p>
                         </div>
                     </div>
 
 
                     <div class="row filaCotizacion d-flex justify-content-evenly">
-                        <div class="col-sm-1 col-1  d-flex align-items-center justify-content-center">
-                            <img class="iconoCotizacion precioCalGar" src="./img/iconoGarantia.png" alt="" height="40px">
+                        <div class=" col-1  d-flex align-items-center justify-content-center">
+                            <img class="iconoCotizacion precioCalGar" src="./img/iconoGarantia.png" alt=""
+                                height="40px">
                         </div>
-                        <div class="col-sm-10 col-10">
+                        <div class="col-10">
                             <h3>Garantia.</h3>
                             <p>Contamos con la asesoría de expertos en múltiples áreas para casos particulares
                                 priorizando la resolución del problema.</p>
                         </div>
                     </div>
                     <div class="oculto">
-                    <div class="seccionColumna2Cotizacion d-flex flex-column align-items-center justify-content-evenly">
-                        <h2>Reconstrucción en piezas de maquinaria pesada</h2>
-                        <h3>Atencion y precios especiales para tu empresa o flota de vehiculos! </h3>
-                        <img class="camiones " src="./img/camiones.png" alt="" height="240px">
+                        <div
+                            class="seccionColumna2Cotizacion d-flex flex-column align-items-center justify-content-evenly">
+                            <h2>Reconstrucción en piezas de maquinaria pesada</h2>
+                            <h3>Atencion y precios especiales para tu empresa o flota de vehiculos! </h3>
+                            <img class="camiones " src="./img/camiones.png" alt="" height="240px">
+                        </div>
                     </div>
                 </div>
+
+            </div>
+
+    </section>
+
+    <!-- SECTION - TESTIMONIOS -->
+
+    <section class="testimonios">
+        <div class="comentarios">
+            <h2>Testimonios</h2>
+            <div class="elfsight-app-6097798a-e038-4b20-9c98-33ed32df0449"></div>
+        </div>
+    </section>
+
+        <!-- SECTION - CONTACTO -->
+
+    <section id="dondeEstamos">
+
+        <h2>Dónde Estamos</h2>
+        
+        <div class="container-fluid">
+
+            <div class="row contactos d-flex justify-content-around">
+
+                <div class="col-sm-3 col-12">
+
+                    <div class="row filaContacto  d-flex justify-content-sm-between">
+                        <div class=" col-sm-1  d-flex align-items-top justify-content-center">
+                            <img src="./img/wpIcono.png" alt="" height="40px">
+                        </div>
+                        <div class="col-sm-10 ">
+                            <h5>Teléfono</h5>
+                            <p>+1 (829) 969-9921.</p>
+                        </div>
+                    </div>
+
+                    <div class="row filaContacto  d-flex justify-content-sm-between">
+                        <div class=" col-sm-1 d-flex align-items-top justify-content-center">
+                            <img src="./img/correoIcono.png" alt="" height="40px">
+                        </div>
+                        <div class="col-sm-10">
+                            <h5>Email</h5>
+                            <p>reconstructoramerida@gmail.com</p>
+                        </div>
+                    </div>
+
+                    <div class="row filaContacto   d-flex justify-content-sm-between">
+                        <div class="col-sm-1 d-flex justify-content-center">
+                            <img src="./img/instaIcono.png" alt="" height="40px">
+                        </div>
+                        <div class="col-sm-10">
+                            <h5>Instagram</h5>
+                        </div>
+                    </div>
+
+                    <div class="row filaContacto  d-flex justify-content-sm-between">
+                        <div class=" col-sm-1 d-flex align-items-center justify-content-center">
+                            <img src="./img/facebookIcono.png" alt="" height="40px">
+                        </div>
+                        <div class="col-sm-10">
+                            <h5>Facebook</h5>
+                        </div>
+                    </div>
+
+                    <div class="horariosAtencionMaxRes">
+                        <div class="row filaContacto  d-flex justify-content-sm-between">
+                            <div class=" col-sm-1 d-flex align-items-top justify-content-center">
+                                <img src="./img/relojIcono.png" alt="" height="40px">
+                            </div>
+                            <div class="col-sm-10">
+                                <h5>Horarios de atención</h5>
+                                <p>Lunes a sábado:</p>
+                                <p>7:00 - 19:00.</p>
+                                <p>Domingo:</p>
+                                <p>9:00 a 13:00</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-sm-3 col-12 columnaMapa d-flex flex-column justify-content-center align-items-center">
+                    <p>República Dominicana. Los Mina Santo Domingo Este, Calle Pedro Francisco Bonó 27D. 11901.</p>
+                    <iframe class="mapa"
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15133.706183676475!2d-69.8678786!3d18.509617!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x627e6f7d505dbb31!2sTalleres%20y%20auto%20repuestos%20M%C3%A9rida!5e0!3m2!1ses!2sar!4v1668733873970!5m2!1ses!2sar"
+                        width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+
+                <div class="col-sm-3 col-12">
+                    <div class="container-fluid">
+                        <div class="horariosAtencionLowRes">
+                            <div class=" filaContacto row d-flex justify-content-between">
+
+                                <div class=" col-1 d-flex align-items-top justify-content-center">
+                                    <img src="./img/relojIcono.png" alt="" height="40px">
+                                </div>
+
+
+                                <div class="col-10">
+                                    <h5>Horarios de atención</h5>
+                                    <p>Lunes a sábado:</p>
+                                    <p>7:00 - 19:00.</p>
+                                    <p>Domingo:</p>
+                                    <p>9:00 a 13:00</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
     </section>
+
+
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
