detalles del cliente, añadido icono de wpp

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
             </div>
         </nav>
 
+        <div class="whatsapp">
+            <a href="https://www.google.com.ar/"> <img src="./img/whatsapp.png" href="https://www.google.com.ar/" alt="" height="50px"></a>
+        </div>
+
         <!-- SECTION SECCION CUERPO DEL HEADER -->
 
         <div class="container-fluid contenedorLogoYTitulo">
@@ -245,42 +249,42 @@
                             y
                             efectivas.</p>
                     </div>
-                    <div class="row filaCotizacion d-flex justify-content-evenly">
-                        <div class=" col-1 d-flex align-items-center justify-content-center">
+                    <div class="row filaCotizacion d-flex justify-content-center justify-content-sm-evenly">
+                        <div class=" col-2 col-sm-1 d-flex align-items-center justify-content-center">
                             <img class="iconoCotizacion" src="./img/iconoTrofeo.png" alt="" height="40px">
                         </div>
-                        <div class=" col-10">
+                        <div class="col-8 col-sm-10">
                             <h3>Talento.</h3>
                             <p>Mecánico profesional con más de 15 años de experiencia en reconstrucción de motores.</p>
                         </div>
                     </div>
 
-                    <div class="row filaCotizacion d-flex justify-content-evenly">
-                        <div class=" col-1 d-flex align-items-center justify-content-center">
+                    <div class="row filaCotizacion d-flex justify-content-center justify-content-sm-evenly">
+                        <div class=" col-2 col-sm-1 d-flex align-items-center justify-content-center">
                             <img class="iconoCotizacion" src="./img/iconoPC.png" alt="" height="40px">
                         </div>
-                        <div class="col-10">
+                        <div class="col-8 col-sm-10">
                             <h3>Tecnología.</h3>
                             <p>Diagnóstico computarizado GRATUITO y lavado de piezas con técnicas avanzadas.</p>
                         </div>
                     </div>
 
-                    <div class="row filaCotizacion d-flex justify-content-evenly">
-                        <div class=" col-1 d-flex align-items-center justify-content-center">
+                    <div class="row filaCotizacion d-flex justify-content-center justify-content-sm-evenly">
+                        <div class=" col-2 col-sm-1 d-flex align-items-center justify-content-center">
                             <img class="iconoCotizacion" src="./img/iconoDelivery.png" alt="" height="30px">
                         </div>
-                        <div class="col-10">
+                        <div class="col-8 col-sm-10">
                             <h3>Transporte de piezas.</h3>
                             <p>Recolectamos y entregamos.</p>
                         </div>
                     </div>
 
 
-                    <div class="row filaCotizacion d-flex justify-content-evenly">
-                        <div class=" col-1 d-flex align-items-center justify-content-center">
+                    <div class="row filaCotizacion d-flex justify-content-center justify-content-sm-evenly">
+                        <div class=" col-2 col-sm-1 d-flex align-items-center justify-content-center">
                             <img class="iconoCotizacion" src="./img/iconoPersonas.png" alt="" height="30px">
                         </div>
-                        <div class="col-10">
+                        <div class="col-8 col-sm-10">
                             <h3>Colaboraciones.</h3>
                             <p>Contamos con la asesoría de expertos en múltiples áreas para casos particulares
                                 priorizando la resolución del problema.</p>
@@ -292,31 +296,31 @@
                 <!-- NOTE COLUMNA 2 COTIZACION -->
 
                 <div class="col-sm-5 Columna2Cotizacion">
-                    <div class="row filaCotizacion d-flex justify-content-evenly">
-                        <div class=" col-1 d-flex align-items-center justify-content-center">
+                    <div class="row filaCotizacion d-flex justify-content-center justify-content-sm-evenly">
+                        <div class=" col-2 col-sm-1 d-flex align-items-center justify-content-center">
                             <img class="iconoReloj" src="./img/iconoReloj.png" alt="" height="50px">
                         </div>
-                        <div class="col-10">
+                        <div class="col-8 col-sm-10">
                             <h3>Horarios.</h3>
                             <p>Amplio horario de atención, incluso los fines de semana.</p>
                         </div>
                     </div>
 
-                    <div class="row filaCotizacion d-flex justify-content-evenly">
-                        <div class=" col-1 d-flex align-items-center justify-content-center">
+                    <div class="row filaCotizacion d-flex justify-content-center justify-content-sm-evenly">
+                        <div class=" col-2 col-sm-1 d-flex align-items-center justify-content-center">
                             <img class="iconoCotizacion precioCalGar" src="./img/iconoPrecio.png" alt="" height="50px">
                         </div>
-                        <div class="col-10">
+                        <div class="col-8 col-sm-10">
                             <h3>Precios.</h3>
                             <p>Precios favorables para proveedores de servicios mecánicos y empresas por contrato.</p>
                         </div>
                     </div>
 
-                    <div class="row filaCotizacion d-flex justify-content-evenly">
-                        <div class=" col-1 d-flex align-items-center justify-content-center">
+                    <div class="row filaCotizacion d-flex justify-content-center justify-content-sm-evenly">
+                        <div class=" col-2 col-sm-1 d-flex align-items-center justify-content-center">
                             <img class="iconoCotizacion precioCalGar" src="./img/iconoCalidad.png" alt="" height="40px">
                         </div>
-                        <div class="col-10">
+                        <div class="col-8 col-sm-10">
                             <h3>Calidad.</h3>
                             <p>Trabajos 100% transparentes, fiables y de calidad, con referencias comprobables en RD y
                                 Venezuela.</p>
@@ -324,12 +328,12 @@
                     </div>
 
 
-                    <div class="row filaCotizacion d-flex justify-content-evenly">
-                        <div class=" col-1  d-flex align-items-center justify-content-center">
+                    <div class="row filaCotizacion d-flex justify-content-center justify-content-sm-evenly">
+                        <div class=" col-2 col-sm-1  d-flex align-items-center justify-content-center">
                             <img class="iconoCotizacion precioCalGar" src="./img/iconoGarantia.png" alt=""
                                 height="40px">
                         </div>
-                        <div class="col-10">
+                        <div class="col-8 col-sm-10">
                             <h3>Garantia.</h3>
                             <p>Contamos con la asesoría de expertos en múltiples áreas para casos particulares
                                 priorizando la resolución del problema.</p>
@@ -366,7 +370,7 @@
 
         <div class="container-fluid">
 
-            <div class="row contactos d-flex justify-content-around">
+            <div class="row contactos d-flex flex-column-reverse flex-sm-row justify-content-around">
 
                 <div class="col-sm-3 col-12">
 
