--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="d-flex justify-content-end align-items-center barraNav">
                         <a class="nav-link" href="#dondeEstamos">Contacto</a>
                         <a class="nav-link" href="#servicios">Servicios</a>
-                        <a class="nav-link" href="#nosotros">Nosotros</a>
+                        <a class="nav-link" href="#cotizacion">Nosotros</a>
                     </div>
                 </div>
             </div>
