--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
 
         <div class="whatsapp">
-            <a href="https://www.google.com.ar/"> <img src="./img/whatsapp.png" href="https://www.google.com.ar/" alt="" height="50px"></a>
+            <a href="https://walink.co/b3598b" target="_blank"> <img src="./img/whatsapp.png" href="https://walink.co/b3598b" alt="" height="50px"></a>
         </div>
 
         <!-- SECTION SECCION CUERPO DEL HEADER -->
@@ -50,7 +50,7 @@
                     <img src="./img/logo.ico.png" class="logo " alt="">
                     <p class="innovandoTexto">Innovando en la reconstrucción de motores en República Dominicana.</p>
                 </div>
-                <div class="col-sm-6 animate__delay-1s animate__animated animate__fadeIn d-flex flex-column align-items-center justify-content-evenly">
+                <div class="col-sm-6 animate__animated animate__fadeIn d-flex flex-column align-items-center justify-content-evenly">
                     <h1>Talleres y Autorrepuestos Mérida</h1>
                     <p class="textoHeader">Somos Mérida, un taller de reconstrucción de motores fundado en 2020, con
                         mecánicos altamente especializados con más de 15 años de experiencia en todo tipo de motores.
@@ -64,15 +64,15 @@
             </div>
         </div>
 
-        <div class="carruselMarcas">
-            <img src="./img/MercedesBenzLogo.png" alt="" height="40px">
-            <img src="./img/GMCLogo.png" alt="" height="60px">
-            <img src="./img/JeepLogo.png" alt="" height="40px">
-            <img src="./img/ToyotaLogo.png" alt="" height="40px">
-            <img src="./img/VolvoLogo.png" alt="" height="40px">
-            <img src="./img/chevroletLogo.png" alt="" height="40px">
-            <img src="./img/caterpillarLogo.png" alt="" height="70px">
-            <img src="./img/audiLogo.png" alt="" height="40px">
+        <div class="carruselMarcas" >
+            <img data-aos="fade-right" data-aos-delay="1" data-aos-once="true" src="./img/MercedesBenzLogo.png" alt="" height="40px">
+            <img data-aos="fade-right" data-aos-delay="1" data-aos-once="true" src="./img/GMCLogo.png" alt="" height="60px">
+            <img data-aos="fade-right" data-aos-delay="1" data-aos-once="true" src="./img/JeepLogo.png" alt="" height="40px">
+            <img data-aos="fade-right" data-aos-delay="1" data-aos-once="true" src="./img/ToyotaLogo.png" alt="" height="40px">
+            <img data-aos="fade-right" data-aos-delay="1" data-aos-once="true" src="./img/VolvoLogo.png" alt="" height="40px">
+            <img data-aos="fade-right" data-aos-delay="1" data-aos-once="true" src="./img/chevroletLogo.png" alt="" height="40px">
+            <img data-aos="fade-right" data-aos-delay="1" data-aos-once="true" src="./img/caterpillarLogo.png" alt="" height="70px">
+            <img data-aos="fade-right" data-aos-delay="1" data-aos-once="true" src="./img/audiLogo.png" alt="" height="40px">
         </div>
 
     </header>
@@ -83,7 +83,7 @@
 
         <div class="container-fluid">
             <div class="row filaNosotros">
-                <div class="col-sm-6 columna1Nosotros">
+                <div class="col-sm-6 columna1Nosotros" data-aos="fade-right" data-aos-delay="200" data-aos-once="true">
                     <h2>Algunos Motores que Trabajamos</h2>
                     <div class="listaMotoresQueTrabajamos">
                         <p>Diesel</p>
@@ -92,7 +92,7 @@
                         <p>Fuera de Borda</p>
                     </div>
                 </div>
-                <div class="col-sm-6 columna2Nosotros">
+                <div class="col-sm-6 columna2Nosotros" data-aos="fade-left" data-aos-delay="200" data-aos-once="true">
                     <h2>¿Tienes un problema con tu motor?</h2>
                     <p>Talleres Mérida es la solución.</p>
                     <img src="./img/imagenNosotros.png" alt="">
@@ -122,7 +122,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div  class="col-sm-4 col-6 d-flex flex-column align-items-center columna1">
-                    <img data-aos="fade-down" data-aos-delay="100" data-aos-once="true" src="./img/CULATA.png" class="imgLista" alt="" height="180px">
+                    <img  data-aos="fade-down" data-aos-delay="100" data-aos-once="true" src="./img/CULATA.png" class="imgLista" alt="" height="180px">
                     <ul data-aos="fade-right" data-aos-delay="100" data-aos-once="true" class="lista">
                         <li>
                             <p>Reparación de válvulas.</p>
@@ -146,8 +146,8 @@
                 </div>
 
                 <div  class="bloqueMotor col-sm-4 col-6 d-flex flex-column align-items-center columna2 ">
-                    <img data-aos="fade-down" data-aos-delay="500" data-aos-once="true" src="./img/BloqueMotor.png" class="imgLista" alt="" height="180px">
-                    <ul data-aos="fade-right" data-aos-delay="500" data-aos-once="true" class="lista">
+                    <img data-aos="fade-down" data-aos-delay="100" data-aos-once="true" src="./img/BloqueMotor.png" class="imgLista" alt="" height="180px">
+                    <ul data-aos="fade-right" data-aos-delay="100" data-aos-once="true" class="lista">
                         <li>
                             <p>Encamisado de block.
                             </p>
@@ -171,8 +171,8 @@
                 </div>
 
                 <div  class="cigueniales col-sm-4 col-6 d-flex flex-column align-items-center columna3">
-                    <img data-aos="fade-down" data-aos-delay="1000" data-aos-once="true" src="./img/Cigueniales.png" class="imgLista" alt=" " height="180px">
-                    <ul data-aos="fade-right" data-aos-delay="1000" data-aos-once="true" class="lista">
+                    <img data-aos="fade-down" data-aos-delay="100" data-aos-once="true" src="./img/Cigueniales.png" class="imgLista" alt=" " height="180px">
+                    <ul data-aos="fade-right" data-aos-delay="100" data-aos-once="true" class="lista">
                         <li>
                             <p>Rectificación de cigüeñal.
                             </p>
@@ -217,11 +217,11 @@
                 </div>
 
                 <div  class="col-sm-4 col-6 d-flex flex-column align-items-center">
-                    <img data-aos="fade-down" data-aos-delay="500" data-aos-once="true" src="./img/FueraDeBorda.png" class="imgLista" alt="" height="190px">
+                    <img data-aos="fade-down" data-aos-delay="100" data-aos-once="true" src="./img/FueraDeBorda.png" class="imgLista" alt="" height="190px">
                 </div>
 
                 <div  class="col-sm-4 col-6 d-flex flex-column align-items-center">
-                    <img data-aos="fade-down" data-aos-delay="1000" data-aos-once="true" src="./img/VentaRepuestos.png" class="imgLista" class="ventaImg" alt="" height="192px">
+                    <img data-aos="fade-down" data-aos-delay="100" data-aos-once="true" src="./img/VentaRepuestos.png" class="imgLista" class="ventaImg" alt="" height="192px">
                 </div>
             </div>
         </div>
@@ -236,7 +236,7 @@
 
                 <!-- NOTE COLUMNA 1 COTIZACION -->
 
-                <div class="col-sm-5 columna1Cotizacion">
+                <div class="col-sm-5 columna1Cotizacion" data-aos-delay="300" data-aos="fade" data-aos-once="true">
                     <div class="seccionColumna1Cotizacion">
                         <h2>Cotización</h2>
                         <p>Para dar un valor preciso se requiere un diagnóstico previo realizado por un especialista que
@@ -295,7 +295,7 @@
 
                 <!-- NOTE COLUMNA 2 COTIZACION -->
 
-                <div class="col-sm-5 Columna2Cotizacion">
+                <div class="col-sm-5 Columna2Cotizacion" data-aos-delay="300" data-aos="fade" data-aos-once="true">
                     <div class="row filaCotizacion d-flex justify-content-center justify-content-sm-evenly">
                         <div class=" col-2 col-sm-1 d-flex align-items-center justify-content-center">
                             <img class="iconoReloj" src="./img/iconoReloj.png" alt="" height="50px">
@@ -389,8 +389,8 @@
                             <img src="./img/correoIcono.png" alt="" height="40px">
                         </div>
                         <div class="col-sm-10">
-                            <h5>Email</h5>
-                            <p>reconstructoramerida@gmail.com</p>
+                            <a href="mailto:reconstructoramerida@gmail.com"><h5>Email</h5></a>
+                            <a href="mailto:reconstructoramerida@gmail.com"><p>reconstructoramerida@gmail.com</p></a>
                         </div>
                     </div>
 
@@ -399,7 +399,7 @@
                             <img src="./img/instaIcono.png" alt="" height="40px">
                         </div>
                         <div class="col-sm-10">
-                            <h5>Instagram</h5>
+                            <a href="https://www.instagram.com/talleresmerida/?hl=es-la" target="_blank"><h5>Instagram</h5></a>
                         </div>
                     </div>
 
@@ -408,7 +408,7 @@
                             <img src="./img/facebookIcono.png" alt="" height="40px">
                         </div>
                         <div class="col-sm-10">
-                            <h5>Facebook</h5>
+                            <a href="https://www.facebook.com/talleresyautorepuestosmerida" target="_blank"><h5>Facebook</h5></a>
                         </div>
                     </div>
 
@@ -460,6 +460,8 @@
                 </div>
             </div>
     </section>
+
+   
 
 
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
