--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div  class="col-sm-4 col-6 d-flex flex-column align-items-center columna1">
-                    <img  data-aos="fade-down" data-aos-delay="100" data-aos-once="true" src="./img/CULATA.png" class="imgLista" alt="" height="180px">
-                    <ul data-aos="fade-right" data-aos-delay="100" data-aos-once="true" class="lista">
+                    <img  data-aos="fade-down" data-aos-delay="100"  src="./img/CULATA.png" class="imgLista" alt="" height="180px">
+                    <ul data-aos="fade-right" data-aos-delay="100"  class="lista">
                         <li>
                             <p>Reparación de válvulas.</p>
                         </li>
@@ -146,8 +146,8 @@
                 </div>
 
                 <div  class="bloqueMotor col-sm-4 col-6 d-flex flex-column align-items-center columna2 ">
-                    <img data-aos="fade-down" data-aos-delay="100" data-aos-once="true" src="./img/BloqueMotor.png" class="imgLista" alt="" height="180px">
-                    <ul data-aos="fade-right" data-aos-delay="100" data-aos-once="true" class="lista">
+                    <img data-aos="fade-down" data-aos-delay="100"  src="./img/BloqueMotor.png" class="imgLista" alt="" height="180px">
+                    <ul data-aos="fade-right" data-aos-delay="100"  class="lista">
                         <li>
                             <p>Encamisado de block.
                             </p>
@@ -171,8 +171,8 @@
                 </div>
 
                 <div  class="cigueniales col-sm-4 col-6 d-flex flex-column align-items-center columna3">
-                    <img data-aos="fade-down" data-aos-delay="100" data-aos-once="true" src="./img/Cigueniales.png" class="imgLista" alt=" " height="180px">
-                    <ul data-aos="fade-right" data-aos-delay="100" data-aos-once="true" class="lista">
+                    <img data-aos="fade-down" data-aos-delay="100"  src="./img/Cigueniales.png" class="imgLista" alt=" " height="180px">
+                    <ul data-aos="fade-right" data-aos-delay="100"  class="lista">
                         <li>
                             <p>Rectificación de cigüeñal.
                             </p>
@@ -193,8 +193,8 @@
                 </div>
 
                 <div class="col-sm-4 col-6 d-flex flex-column align-items-center">
-                    <img data-aos="fade-down" data-aos-delay="100"  data-aos-once="true" src="./img/Bielas.png" class="imgLista" alt="" height="190px">
-                    <ul data-aos="fade-right" data-aos-delay="100" data-aos-once="true" class="lista">
+                    <img data-aos="fade-down" data-aos-delay="100"   src="./img/Bielas.png" class="imgLista" alt="" height="190px">
+                    <ul data-aos="fade-right" data-aos-delay="100"  class="lista">
                         <li>
                             <p>Rectificación de bielas.
                             </p>
@@ -217,11 +217,11 @@
                 </div>
 
                 <div  class="col-sm-4 col-6 d-flex flex-column align-items-center">
-                    <img data-aos="fade-down" data-aos-delay="100" data-aos-once="true" src="./img/FueraDeBorda.png" class="imgLista" alt="" height="190px">
+                    <img data-aos="fade-down" data-aos-delay="100"  src="./img/FueraDeBorda.png" class="imgLista" alt="" height="190px">
                 </div>
 
                 <div  class="col-sm-4 col-6 d-flex flex-column align-items-center">
-                    <img data-aos="fade-down" data-aos-delay="100" data-aos-once="true" src="./img/VentaRepuestos.png" class="imgLista" class="ventaImg" alt="" height="192px">
+                    <img data-aos="fade-down" data-aos-delay="100"  src="./img/VentaRepuestos.png" class="imgLista" class="ventaImg" alt="" height="192px">
                 </div>
             </div>
         </div>
@@ -236,7 +236,7 @@
 
                 <!-- NOTE COLUMNA 1 COTIZACION -->
 
-                <div class="col-sm-5 columna1Cotizacion" data-aos-delay="300" data-aos="fade" data-aos-once="true">
+                <div class="col-sm-5 columna1Cotizacion" data-aos="fade-up" >
                     <div class="seccionColumna1Cotizacion">
                         <h2>Cotización</h2>
                         <p>Para dar un valor preciso se requiere un diagnóstico previo realizado por un especialista que
@@ -295,7 +295,7 @@
 
                 <!-- NOTE COLUMNA 2 COTIZACION -->
 
-                <div class="col-sm-5 Columna2Cotizacion" data-aos-delay="300" data-aos="fade" data-aos-once="true">
+                <div class="col-sm-5 Columna2Cotizacion" data-aos="fade-up">
                     <div class="row filaCotizacion d-flex justify-content-center justify-content-sm-evenly">
                         <div class=" col-2 col-sm-1 d-flex align-items-center justify-content-center">
                             <img class="iconoReloj" src="./img/iconoReloj.png" alt="" height="50px">
@@ -379,8 +379,8 @@
                             <img src="./img/wpIcono.png" alt="" height="40px">
                         </div>
                         <div class="col-sm-10 ">
-                            <h5>Teléfono</h5>
-                            <p>+1 (829) 969-9921.</p>
+                            <a href="tel:+18299699921"><h5>Teléfono</h5></a>
+                            <a href="tel:+18299699921"><p>+1 829 969-9921.</p></a>
                         </div>
                     </div>
 
